[package]
name = "ray-tracing-series"
version = "0.1.0"
authors = ["TRDJ90 <thubie90@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8"
log = "0.4"
pixels = "0.2.0"
winit = "0.24"
winit_input_helper = "0.9"
image = "0.23.14"